add website embedding info

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="initial-scale=1, user-scalable=no, maximum-scale=1, width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="WRAP Map Viewer">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://obermajer.co.uk/WRAP-Web-Map/">
+    <meta property="og:description" content="Web map for the Winter Rainfall Acceptance Potential (WRAP) map">
+    <meta property="og:site_name" content="WRAP Map Viewer">
+    
+
     <link rel="stylesheet" href="./resources/ol.css">
     <link rel="stylesheet" href="./resources/fontawesome-all.min.css">
     <link rel="stylesheet" href="./resources/ol-geocoder.min.css">
