add pat-img in index.html now

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:url" content="https://obermajer.co.uk/WRAP-Web-Map/">
     <meta property="og:description" content="Web map for the Winter Rainfall Acceptance Potential (WRAP) map">
     <meta property="og:site_name" content="WRAP Map Viewer">
+    <meta property="og:image" content="https://obermajer.co.uk/WRAP-Web-Map/pat-imgz/pat-screen.png">
     
 
     <link rel="stylesheet" href="./resources/ol.css">
